// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List default snapshot 1`] = `
<List
  autoHeight={false}
  className="list"
  estimatedRowSize={30}
  height={400}
  items={Array []}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowCount={0}
  rowHeight={40}
  rowRenderer={[Function]}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={100}
/>
`;

exports[`List snapshot with height 1`] = `
<List
  autoHeight={false}
  className="list"
  estimatedRowSize={30}
  height={200}
  items={Array []}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowCount={0}
  rowHeight={40}
  rowRenderer={[Function]}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={100}
/>
`;

exports[`List snapshot with offset 1`] = `
<List
  autoHeight={false}
  className="list"
  estimatedRowSize={30}
  height={400}
  items={Array []}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowCount={0}
  rowHeight={40}
  rowRenderer={[Function]}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={96}
/>
`;

exports[`List snapshot with rowHeight 1`] = `
<List
  autoHeight={false}
  className="list"
  estimatedRowSize={30}
  height={400}
  items={Array []}
  noRowsRenderer={[Function]}
  onRowsRendered={[Function]}
  onScroll={[Function]}
  overscanIndicesGetter={[Function]}
  overscanRowCount={10}
  rowCount={0}
  rowHeight={40}
  rowRenderer={[Function]}
  scrollToAlignment="auto"
  scrollToIndex={-1}
  style={Object {}}
  width={100}
/>
`;
